pa10/tests/type_error/return_mismatch.uC
int main() {
	return 0;
}

float foo(int x) {
	return x;
}
